// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot of breeder register 1`] = `
Array [
  <h1
    className="text-center my-5"
  >
    Parent Login
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="email"
    >
      Email: 
    </label>
    <input
      className="form-control my-2"
      id="email"
      name="reg_email"
      onChange={[Function]}
      placeholder="email"
      type="email"
      value=""
    />
    <label
      htmlFor="password"
    >
      Password: 
    </label>
    <input
      className="form-control my-2"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="password"
      type="password"
      value=""
    />
    <button
      className="btn btn-success btn-block"
      color="pink"
    >
      Login
    </button>
  </form>,
]
`;

exports[`matches snapshot of breeder register 2`] = `
Array [
  <h1
    className="text-center my-5"
  >
    Administrator Login
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="email"
    >
      Email: 
    </label>
    <input
      className="form-control my-2"
      id="email"
      name="reg_email"
      onChange={[Function]}
      placeholder="email"
      type="email"
      value=""
    />
    <label
      htmlFor="password"
    >
      Password: 
    </label>
    <input
      className="form-control my-2"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="password"
      type="password"
      value=""
    />
    <button
      className="btn btn-success btn-block"
    >
      Login
    </button>
  </form>,
]
`;

exports[`matches snapshot of parent register 1`] = `
Array [
  <h1
    className="text-center my-5"
  >
    Breeder Login
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="email"
    >
      Email: 
    </label>
    <input
      className="form-control my-2"
      id="email"
      name="reg_email"
      onChange={[Function]}
      placeholder="email"
      type="email"
      value=""
    />
    <label
      htmlFor="password"
    >
      Password: 
    </label>
    <input
      className="form-control my-2"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="password"
      type="password"
      value=""
    />
    <button
      className="btn btn-success btn-block"
    >
      Login
    </button>
  </form>,
]
`;
